ClouDotNetive/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${METADATA_NAME}
spec:
  selector:
    matchLabels:
      app: PATCH_BY_KUSTOMIZE
  template:
    spec:
      containers:
        - name: ${CONTAINER_NAME}
          image: ${IMAGE_NAME}:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
