ClouDotNetive/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${METADATA_NAME}
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
