ClouDotNetive/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${METADATA_NAME}
  annotations:
    traefik.frontend.passHostHeader: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${METADATA_NAME}
                port:
                  number: 80
